# tyb

./: .gitignore  AGENTS.md  PROJECT_HANDOFF.md  README.md  pyproject.toml  requirements.txt  test_pdf_indexing_parallel.py
design_docs/: CREW_REFACTOR_WORKING_DRAFT.md  next_step_20260410.md  planner重构.md  项目信息传递链路全面分析.md
output/: Ligent Technologies, Inc. (納真科技公司_investment_snapshot.pptx  Ligent Technologies, Inc. (納真科技公司_pitch_material.md  上海曦智科技股份有限公司_investment_snapshot.pptx  上海曦智科技股份有限公司_pitch_material.md  中微半導體（深圳）股份有限公司_investment_snapshot.pptx  中微半導體（深圳）股份有限公司_pitch_material.md  中文在線集團股份有限公司_investment_snapshot.pptx  中文在線集團股份有限公司_pitch_material.md  山金國際黃金股份有限公司_investment_snapshot.pptx  山金國際黃金股份有限公司_pitch_material.md  青島特銳德電氣股份有限公司_investment_snapshot.pptx  青島特銳德電氣股份有限公司_pitch_material.md
src/automated_research_report_generator/: llm_config.py  main.py
src/automated_research_report_generator/crews/: crew_profile_loader.py
src/automated_research_report_generator/flow/: common.py  models.py  registry.py  research_flow.py
src/automated_research_report_generator/tools/: registry_tools.py
src/automated_research_report_generator_v0_1/: __init__.py  crew.py  document_metadata.py  main.py  pdf_indexing.py  pdf_indexing_parellel.py
src/automated_research_report_generator_v0_1/config/: agents.yaml  tasks.yaml
test_src/: test_investment_snapshot_ppt_tool.py  test_main_batch_run.py  test_main_console_logging.py  test_registry_tools_stability.py  test_research_flow_gate.py  test_research_registry_pipeline.py  test_research_subcrew_configs.py
(+31 files in other folders)
